# smart-notes-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
notes/: celery.py  settings.py  urls.py  views.py
notes_app/: admin.py  decorators.py  forms.py  models.py  tasks.py  urls.py  views.py
notes_app/migrations/: 0001_initial.py  0002_note_user_tag_user_alter_tag_name_and_more.py  0003_note_deadline_note_is_expired_note_is_todo.py  0004_remove_note_is_expired.py
notes_app/templates/notes_app/: note_create.html  note_detail.html  note_form.html  note_list.html  set_deadline.html  tag_create.html  tag_list.html
notes_app/templatetags/: custom_filters.py
static/css/: custom.css
templates/: base.html  welcome.html
users_app/: emails.py  forms.py  models.py  signals.py  tasks.py  tokens.py  urls.py  views.py
users_app/migrations/: 0001_initial.py  0002_profile_is_confirmed.py
users_app/templates/users_app/: edit_profile.html  login.html  profile.html  reset_password.html  reset_password_confirm.html  reset_password_done.html  reset_password_form.html  signup.html
users_app/tests/: conftest.py  test_forms.py  test_models.py  test_tasks.py  test_views.py
