[project]
name = "django-note-app"
version = "0.1.0"
description = ""
authors = [
    {name = "pradivliany",email = "yaroslavpradyvlianyi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "celery[redis] (>=5.5.3,<6.0.0)",
    "django-celery-beat (>=2.8.1,<3.0.0)",
    "celery-types (>=0.23.0,<0.24.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest = "^9.0.1"
pytest-mock = "^3.15.1"
pytest-django = "^4.11.1"
faker = "^38.2.0"
pytest-factoryboy = "^2.8.1"
celery = {extras = ["pytest"], version = "^5.6.0"}


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "notes.settings"
python_files = ["test_*.py"]
